Bug 1495353: The image selector is hidden behind fullscreen tinymce
Need to boost the z-index to be above 1080 as that is the z-index of
the fullscreen tinymce editor.

behatnotneeded

--- a/htdocs/theme/raw/sass/components/_modal.scss
+++ b/htdocs/theme/raw/sass/components/_modal.scss
@@ -21,6 +21,10 @@ $width-sm: 90%;
     @extend .text-watermark;
 }
 
+.modal-tinymce {
+    z-index: 2000;
+}
+
 .modal-tinymce,
 .modal-docked {
     background: rgba(0,0,0,0.09);
